--- a/index.html
+++ b/index.html
@@ -1,57 +1,24 @@
-<html>
-    <head>
-        <title>Music Player Design</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    </head>
-    <body>
-        <div class="music-container">
-            <div class="music-img text-center">
-                <div class="music-header">
-                    <i class="fa fa-angle-left" ></i>
-                    <div class="title"><p>Now Playing</p></div>
-                    <i class="fa fa-list-ul" ></i>
-                </div>
-                <div class="inner-img">
-                <img src="img/Ss.jpg">
-                </div>
-                <p><b>The Lex B!!!!!</b></p>
-                <marquee><em><b>Thinking about it all the time [malawimusic.com]</b></em></marquee>
-            </div>
-            <div class="music-control">
-                <div class="music-bar">
-                <div class="progress">
-                <div class="progress-bar"></div>
-                </div>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap App</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
 
-                <div class="social-bar text-center">
-                <i class="fa fa-heart" ></i>
-                <i class="fa fa-download" ></i>
-                <i class="fa fa-share-alt" ></i>
-                <i class="fa fa-ellipsis-h" ></i>
-                </div>
+<div class="container-fluid">
+  <h1>My First Bootstrap Page</h1>
+  <p>The followig is a list of some of my progects</p> 
+</div>
+    <div class="row">
+      <div class="col-sm-4">.col-sm-4</div>
+      <div class="col-sm-4">.col-sm-4</div>
+      <div class="col-sm-4">.col-sm-4</div>
+    </div>
 
-            <div class="control-bar text-center">
-            <audio controls>
-                <source src="Lay It Down iM1.mp3" type="audio/mpeg">
-                <source src="Lay It Down iM1.mp3" type="audio/mpeg">
-            </audio>
-            
-            </div>
-            </div>
-            <div class="user-menu text-center">
-            <ul>
-            <li class="active">
-            <a href="#"><i class="fa fa-home"></i><p>Home</p></a></li>
-            <li>
-            <a href="#"><i class="fa fa-music"></i><p>My Music</p></a></li>
-            <li>
-            <a href="#"><i class="fa fa-microphone"></i><p>Search</p></a></li>
-            <li>
-            <a href="#"><i class="fa fa-user"></i><p>User</p></a></li>
-            </ul>
-            </div>
-    </body>
+</body>
 </html>
